# sandbox_python

./: .gitignore  README.md  argparse_file.py  circular_buffer.py  compound.py  memory_pills.py  testarg.py
absl/: README  TODO  external_runscript.sh  hello.py  lolcow_mine.def  run_lolcow.py  run_lolcow_sbatch.sh  singularity_cmdline.sh
base64/: base32_encode.py
bfs/: bfs.py
calendar/: calstuff.py
classes/: Cheddar.py
csv/: foo.tsv  foobar101.csv  pdreadcsv.py  plain.csv  readit.py  readplain.py  testcsv.csv  testcsv.xlsx  writer.py
dataclasses/: using_tuples.py
datetime/: conversion.py  date_arithmetic.py  datecompare.py  dateparse.py  datestrings.py  justdate.py  lastmonth.py
drmaa/: sleeper.sh  submit.py
email/: mail_contents.txt  testattachment.py  testemail.py
fiscalyear/: fy_to_datetime.py  list_of_months.py  testfiscal.py
foopkg/: Pipfile  README.md  setup.cfg
foopkg/src/foopkg/: __main__.py  bar.py
grp/: get_all_groups.py
introspection/: introspect.py
json/: foobar.py  zaphod.json
ldap/: foobar.py  foobar3.py  foobar4.py
lists/: pairs.py  strtolist.py  testlist.py
logging/: foobar.py
matplotlib/: bar_colors.py  commas.py  foodata.csv
misc/: exec_string.py
modin/: modintest.ipynb
numpy/: mat_mul.py  mat_mul_job.sh  output_from_mac.txt  python_anaconda.txt  python_anaconda_macos.txt  python_gcc.txt  slurm-745075.out  summary.txt
pandas/: alldata.csv  by_col.py  make_big_csv.py  mask_replace.py  ofinterest.csv  regexreplace.py  series_membership.py  strcontains.py  stringmod.py  strmatch.py  test_merge.py  test_modin.py  (+1 more)
(+79 files in other folders)
