[metadata]
name = foopkg
version = 1.0.0
description = Example of packaging a project
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/prehensilecode/sandbox_python/foopkg
author = David Chin
author_email = foo@example.com
keywords = python
license = GPL version 3
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/prehensilecode/sandbox_python/foopkg

[bdist_wheel]
universal = 1

[options]
packages = find:
platforms = any
python_requires = >=3.6
install_requires =
    delorean>=1.0

[options.packages.find]
where = src
exclude =
    contrib*
    docs*
    tests*

[options.entry_points]
console_scripts =
    foo = foopkg.__main__:main
    bar = foopkg.bar:main

